--- a/templates/index.html
+++ b/templates/index.html
@@ -131,8 +131,8 @@
       
         
         <!-- Show button -->
-        <div class="button_cont" align="center"><a class="button_css" href="https://github.com/prem-creator/heart-detector.git" target="_blank" rel="nofollow noopener">
-            <button type="submit" class="btn btn-primary btn-block btn-large"><strong>Predict Heart disease</strong></button></a>
+        <div class="button_cont" align="center">
+            <button type="submit" class="btn btn-primary btn-block btn-large"><strong>Predict Heart disease</strong></button>
         </div>
         
     </form>
