--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,19 @@
     border-color: #f6b93b !important;
     transition: all 0.4s ease 0s;
     }
+	  
+    #h1forsafe{
+      background-image: url('static/images/healthy_heart.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    #h1fornotsafe{
+      background-image: url('static/images/risk_heart.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
   </style>
 
 </head>
