--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     }
 	  
     #h1forsafe{
-      background-image: url('static/images/healthy_heart.png');
+      background-image: url('static/images/healthy_heart.jpg');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
