--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
    <!-- Show predicted output using ML model --> 
    <div>
        <center>
-   <h1>{{ prediction_text }}</h1>
+   <h1>{{ prediction_text | safe }}</h1>
        </center>
    </div>
 
