--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       background-image: url('static/images/project.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: cover;
+      background-size: auto;
     }
 
     /* CSS code for button */
@@ -38,13 +38,13 @@
       background-image: url('static/images/healthy_heart.jpg');
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: cover;
+      background-size: auto;
     }
     #h1fornotsafe{
       background-image: url('static/images/risk_heart.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: cover;
+      background-size: auto;
     }
   </style>
 
