--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
       background-image: url('static/images/project.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-position: center;
       background-size: auto;
     }
 
@@ -38,12 +39,18 @@
       background-image: url('static/images/healthy_heart.jpg');
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-position: center;
+      height: 500px;
+      color: #59E817;
       background-size: auto;
     }
     #h1fornotsafe{
       background-image: url('static/images/risk_heart.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-position: center;
+      height: 500px;
+      color: #F70D1A;
       background-size: auto;
     }
   </style>
