--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
+      background-color: #ECC5C0;
       background-size: auto;
     }
 
