--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,20 @@
     transition: all 0.4s ease 0s;
     }
 	  
+    input {
+    height: 31px;
+    padding: 0 3px;
+    position: relative;
+    display: block;
+    width: auto;
+    background: #eee;
+    border-radius: 40px;
+    font-family: Ubuntu-Bold;
+    font-size: 12px;
+    color: #8f8fa1;
+    line-height: 1.2;
+    }
+	  
     #h1forsafe{
       background-image: url('static/images/healthy_heart.jpg');
       background-repeat: no-repeat;
