--- a/templates/index.html
+++ b/templates/index.html
@@ -37,16 +37,15 @@
     }
 	  
     input {
-    height: 31px;
+    height: auto;
     padding: 0 3px;
     position: relative;
-    display: block;
     width: auto;
-    background: #eee;
+    background: #fff;
     border-radius: 40px;
-    font-family: Ubuntu-Bold;
-    font-size: 12px;
-    color: #8f8fa1;
+    font-family: Bradley Hand, cursive;
+    font-size: 15px;
+    color: #E77471;
     line-height: 1.2;
     }
 	  
