--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
+      font-family: Stencil Std, fantasy;
       height: 500px;
       color: #59E817;
       background-size: auto;
@@ -63,6 +64,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
+      font-family: Stencil Std, fantasy;
       height: 500px;
       color: #F70D1A;
       background-size: auto;
