--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
-      background-color: #ECC5C0;
+      background-color: #ECC5C0 !important;
       background-size: auto;
     }
 
@@ -45,7 +45,7 @@
     border-radius: 40px;
     font-family: Bradley Hand, cursive;
     font-size: 15px;
-    color: #E77471;
+    color: #483C32;
     line-height: 1.2;
 	margin: 5px 5px;
     }
@@ -55,6 +55,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
+	  background-color: #fff !important;
       font-family: Stencil Std, fantasy;
       height: 500px;
       color: #59E817;
@@ -65,6 +66,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
+	  background-color: #fff !important;
       font-family: Stencil Std, fantasy;
       height: 500px;
       color: #F70D1A;
